--- a/index.html
+++ b/index.html
@@ -1,128 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ByronLaw</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Hero Page-->
-    <div class="hero">
-        <p class="hero-p">We take pride in helping people from all <br> walks of life achieve the justice and <br> peace they deserve.</p>
-        <button class="btn">LEARN MORE</button>
-    </div>
-
-    <!-- Page 1 -->
-    <div class="row">
-        <div class="cards">
-            <h1 class="row-content">How We deal With <br> The Law</h1>
-            <p class="row-p">Our clients' bottom line is our top priority. <br>We are in constant communication with the <br> people we serve and are committed to <br>advancing the immediate needs and wants <br> of our clients. Our team works around the <br>clock to provide the necessary services and <br> support that each client needs from us.
-            By understanding your rights, interacting with law enforcements effectively, and resolving legal issues efficiently, you can better navigate the legal system.</p>
-            <button class="btn">GET IN TOUCH</button>
-        </div>
-        <div>
-     <img class="cardimg" src="byron2.jpg" alt="">
-        </div>
-    </div>
-
-    <!-- Page 2 -->
-    <section class="section">
-        <h2 class="main">Our Main <br>Practices</h2>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ByronLaw</title>
   
-    <div class="flex">
-         <div class="flex1">
-            <h3 class="flex-1">General counsel</h3>
-            <p class="general">What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
-        </div>
-        <div class="flex2">
-            <h3 class="flex-2">Civil Litigation</h3>
-            <p class="civil">What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
-        </div>
-        <div class="flex3">
-            <h3 class="flex-3">Dispute Resolution</h3>
-            <p class="dispute">What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
-        </div>
- 
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- Font Awesome for icons (optional) -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+</head>
+<style>
+.hero{
+    background-image: url(byron01.jpg);
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
+}
+.hero{
+    color: antiquewhite;
+    text-align: left;
+    justify-content: left;
+    padding: 250px;
+    justify-items: left;
+    padding-left: 100px;
+}
+</style>
+<body>
+
+  <!-- Hero Section -->
+  <section class="hero  text-white d-flex flex-column justify-content-center align-items-center vh-100 hero">
+    <div class="container">
+      <p class="fs-3">We take pride in helping people from all <br> walks of life achieve the justice and <br> peace they deserve.</p>
+      <button class="btn btn-warning mt-3">LEARN MORE</button>
     </div>
-</section>
+  </section>
 
-<!-- Page 3 -->
-<section class="section2">
-    <div class="row2">
-        <div class="cards2">
-            <div>
-                <img class="cardimg2" src="byron3.jpg" alt="image 3">
-            </div>
-            
-        </div>
-        <div class="bulletitem">
-            <h2 class="bullet">Our services</h2>
-            <p class="bullet-p">Share your services or specializations here, then list them down as bullet points for mobile-friendly easy reading.</p>
-            <ul class="list">
-            <li><p>Add as many bullets as you need.</p></li>
-            <li><p>Add as many bullets as you need.</p></li>
-            <li><p>Add as many bullets as you need.</p></li>
-            </ul>
-        </div>
+  <!-- Page 1 -->
+  <section class="container py-5">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h1>How We deal With <br> The Law</h1>
+        <p>Our clients' bottom line is our top priority. We are in constant communication with the people we serve and are committed to advancing the immediate needs and wants of our clients. Our team works around the clock to provide the necessary services and support that each client needs from us. By understanding your rights, interacting with law enforcements effectively, and resolving legal issues efficiently, you can better navigate the legal system.</p>
+        <button class="btn btn-primary">GET IN TOUCH</button>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="byron2.jpg" class="img-fluid rounded" alt="Law image">
+      </div>
     </div>
-</section>
+  </section>
 
-<!-- Page 4 -->
-<section class="hire ">
-        <div class="hirediv">
-            <div class="hired">
-                <h1 class="hireh1">Feedback from clients</h1>
-                <p class="hirep">Why you should hire our firm</p>
-    </div>
-    <div class="boost">
-        <div class="testbox">
-            <p>Boost your product and <br>service's credibility by <br>adding testimonials from <br>your clients. People love <br>recommendations so <br>feedback from others <br>who've tried it is
-                invaluable.
-            </p>
-            <p class="name">- Hannah Morales</p>
-
+  <!-- Page 2: Practices -->
+  <section class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="mb-5">Our Main <br> Practices</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <h4>General Counsel</h4>
+          <p>What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
         </div>
-        <div class="testbox">
-            <p>Boost your product and <br>service's credibility by <br>adding testimonials from <br>your clients. People love <br>recommendations so <br>feedback from others <br>who've tried it is
-                invaluable.</p>
-                <p class="name">- Teddy Yugui</p>
+        <div class="col-md-4">
+          <h4>Civil Litigation</h4>
+          <p>What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
         </div>
-        <div class="testbox">
-            <p>Boost your product and <br>service's credibility by <br>adding testimonials from <br>your clients. People love <br>recommendations so <br>feedback from others <br>who've tried it is
-                invaluable.</p>
-                <p class="name">-Lorna Alvarado </p>
+        <div class="col-md-4">
+          <h4>Dispute Resolution</h4>
+          <p>What's special about your services or offerings? Give your audience a reason to choose you over your competition. Cite it above, then flesh it out here.</p>
         </div>
+      </div>
     </div>
-</div>
-</section>
+  </section>
 
-<!-- Contact Info (Page 5) -->
-<section class="info">
-    <div>
-        <h1 class="contact1">Contact Us</h1>
-        <address>
-    123 Anywhere St. <br>
-    Any City, ST 12345
-</address>
-<a href="(123) 456-7890">(123) 456-7890</a><br>
-<a href="hello@reallygreatsite.com">hello@reallygreatsite.com</a>
-    </div> 
-        <h1 class="contact1">Office Hours</h1>
-        <p class="days">Monday to Friday</p><br>
-        <p>9:00 am to 6:00 pm</p>
-    
-    <p class="days">Saturday</p><br>
-    <p>9:00 am to 12 noon</p>
-    <p class="days">closed on Sundays</p>
+  <!-- Page 3: Services -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 mb-4 mb-md-0">
+          <img src="byron3.jpg" class="img-fluid rounded" alt="Services">
+        </div>
+        <div class="col-md-6">
+          <h2>Our Services</h2>
+          <p>Share your services or specializations here, then list them down as bullet points for mobile-friendly easy reading.</p>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Add as many bullets as you need.</li>
+            <li class="list-group-item">Add as many bullets as you need.</li>
+            <li class="list-group-item">Add as many bullets as you need.</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div>
-        <h1 class="hours">Follow Us Online</h1>
-        <p>This is an accessible workplace. Persons with <br>disabilities are welcome to apply. </p>
+  </section>
+
+  <!-- Page 4: Testimonials -->
+  <section class="py-5 bg-light">
+    <div class="container text-center">
+      <h1>Feedback from clients</h1>
+      <p class="mb-5">Why you should hire our firm</p>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="border p-4 rounded shadow-sm">
+            <p>Boost your product and service's credibility by adding testimonials from your clients. People love recommendations so feedback from others who've tried it is invaluable.</p>
+            <p class="fw-bold">- Hannah Morales</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="border p-4 rounded shadow-sm">
+            <p>Boost your product and service's credibility by adding testimonials from your clients. People love recommendations so feedback from others who've tried it is invaluable.</p>
+            <p class="fw-bold">- Teddy Yugui</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="border p-4 rounded shadow-sm">
+            <p>Boost your product and service's credibility by adding testimonials from your clients. People love recommendations so feedback from others who've tried it is invaluable.</p>
+            <p class="fw-bold">- Lorna Alvarado</p>
+          </div>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
 
+  <!-- Contact Info -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row text-center text-md-start">
+        <div class="col-md-4 mb-4">
+          <h4>Contact Us</h4>
+          <address>
+            123 Anywhere St. <br>
+            Any City, ST 12345
+          </address>
+          <p><a href="tel:1234567890">(123) 456-7890</a></p>
+          <p><a href="mailto:hello@reallygreatsite.com">hello@reallygreatsite.com</a></p>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h4>Office Hours</h4>
+          <p><strong>Monday - Friday:</strong> 9:00 AM - 6:00 PM</p>
+          <p><strong>Saturday:</strong> 9:00 AM - 12 Noon</p>
+          <p><strong>Sunday:</strong> Closed</p>
+        </div>
+        <div class="col-md-4">
+          <h4>Follow Us Online</h4>
+          <p>This is an accessible workplace. Persons with disabilities are welcome to apply.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3">
+    <div class="container">
+      &copy; 2025 ByronLaw. All rights reserved.
+    </div>
+  </footer>
 
+  <!-- Bootstrap JS (Optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
